--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
       <artifactId>scala-library</artifactId>
       <version>${scala.version}</version>
     </dependency>
-    <dependency>
+    <!-- <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.4</version>
@@ -41,7 +41,7 @@
       <artifactId>specs</artifactId>
       <version>1.2.5</version>
       <scope>test</scope>
-    </dependency>
+    </dependency> -->
   </dependencies>
 
   <build>
