--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,25 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.scala-tools</groupId>
   <artifactId>javautils</artifactId>
+  <packaging>jar</packaging>
+  <name>Scala-Java Utilities</name>
   <version>0.1-SNAPSHOT</version>
+  <url>http://github.com/jorgeortiz85/scala-javautils</url>
   <inceptionYear>2009</inceptionYear>
+  <description>Utilities for dealing with Scala and Java collections</description>
+  <licenses>
+    <license>
+      <name>Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <connection>scm:git:git://github.com/jorgeortiz85/scala-javautils.git</connection>
+    <developerConnection>scm:git:git@github.com:jorgeortiz85/scala-javautils.git</developerConnection>
+    <url>http://github.com/jorgeortiz85/scala-javautils</url>
+  </scm>
+
   <properties>
     <scala.version>2.7.3</scala.version>
   </properties>
