--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   </scm>
 
   <properties>
-    <scala.version>2.7.4.RC1</scala.version>
+    <scala.version>2.7.4</scala.version>
   </properties>
 
   <repositories>
