--- a/pom.xml
+++ b/pom.xml
@@ -120,4 +120,42 @@
       <uniqueVersion>false</uniqueVersion>
     </snapshotRepository>
   </distributionManagement>
+  <profiles>
+    <profile>
+      <id>release</id>
+      <distributionManagement>
+        <repository>
+          <id>scala-tools.org</id>
+          <url>http://nexus.scala-tools.org/content/repositories/releases</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+    <profile>
+      <id>snapshot</id>
+      <distributionManagement>
+        <repository>
+          <id>scala-tools.org</id>
+          <url>http://nexus.scala-tools.org/content/repositories/snapshots</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+    <profile>
+      <id>hudson</id>
+      <distributionManagement>
+        <repository>
+          <id>hudson.scala-tools.org</id>
+          <url>file:///home/scalatools/hudson/www/repo-releases</url>
+        </repository>
+        <snapshotRepository>
+          <id>hudson.scala-tools.org</id>
+          <url>file:///home/scalatools/hudson/www/repo-snapshots</url>
+          <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+        <site>
+          <id>hudson.scala-tools.org</id>
+          <url>file:///home/scalatools/hudson/www/mvnsites-snapshots/liftweb</url>
+        </site>
+      </distributionManagement>
+    </profile>
+  </profiles>
 </project>
