--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>javautils</artifactId>
   <packaging>jar</packaging>
   <name>Scala-Java Utilities</name>
-  <version>${scala.version}-0.1</version>
+  <version>${scala.version}-0.2-SNAPSHOT</version>
   <url>http://github.com/jorgeortiz85/scala-javautils</url>
   <inceptionYear>2009</inceptionYear>
   <description>Utilities for dealing with Scala and Java collections</description>
