--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <extensions>true</extensions>
         <configuration>
           <instructions>
-            <Bundle-RequiredExecutionEnvironment>JavaSE-1.6</Bundle-RequiredExecutionEnvironment>
+            <Bundle-RequiredExecutionEnvironment>J2SE-1.5</Bundle-RequiredExecutionEnvironment>
             <_versionpolicy>[$(@),$(version;=+;$(@)))</_versionpolicy>
             <Export-Package>org.scala_tools.javautils.*;version="${project.version}"</Export-Package>
           </instructions>
